<resources>
    <string name="app_name">Tarea2</string>
    <!-- Strings related to login -->
    <string name="prompt_name">Nombre</string>
    <string name="prompt_phone">Telefono</string>
    <string name="action_accept">Aceptar</string>
    <string name="action_cancel">Borrar todo</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="instructions">Ingrese sus datos</string>
    <string name="tyc">Acpeto los Terminos y Condiciones</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--Strings para 'formulario_pagina_1-->
    <string name="bulletDescription">Image to use as a bullet point</string>
    <string name="hintQ">Escribe tu respuesta</string>
    <string name="pregunta1">¿A qué juego pertenece la estrella depresiva de color azul?</string>
    <string name="pregunta2">¿Por qué la Princesa Peach se sorprendió al ver a Mario?</string>
    <string name="pregunta3">¿Quién es el personaje más Romántico?</string>
    <string name="pregunta4">El personaje que aparece en estos BulletPoints es Browser. ¿Es esto cierto?</string>
    <string name="pregunta5">¿Qué efectos tiene consumir la estrella del poder?</string>
    <string name="pregunta6">¿Te gustó la película?</string>
    <string name="hintP4">Presiona para marcar tu respuseta</string>
    <string name="msPeach">Princesa Peach</string>
    <string name="mario">Mario</string>
    <string name="luigi">Luigi</string>

    <string name="settings">Configuración</string>
    <string name="help">Ayuda</string>
    <string name="bug">Reportar un Bug</string>
    <string name="share">Compartir</string>
    
    <string-array name="menu_items">
        <item>Sección 1</item>
        <item>Sección 2</item>
        <item>Sección 3</item>
        <item>Sección 4</item>
        <item>Sección 5</item>
    </string-array>
</resources>