<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="2"
        android:title="@string/settings" />

    <item
        android:id="@+id/action_help"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="3"
        android:title="@string/help"/>

    <item
        android:id="@+id/action_bug"
        android:icon="@android:drawable/stat_notify_error"
        android:orderInCategory="4"
        android:title="@string/bug"/>

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="1"
        android:title="@string/share"
        app:showAsAction="ifRoom" />



</menu>