<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/pregunta1"
        tools:ignore="MissingConstraints">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/bulletDescription"
            android:src="@drawable/bowser_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintQ" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pregunta2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/pregunta1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/bulletDescription"
            android:src="@drawable/bowser_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintQ" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pregunta3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/pregunta2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="50dp"
            android:contentDescription="@string/bulletDescription"
            android:src="@drawable/bowser_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta3" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msPeach" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mario" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/luigi"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pregunta4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@+id/pregunta3"

        tools:ignore="MissingConstraints">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/bulletDescription"
            android:src="@drawable/bowser_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta4" />

            <ToggleButton
                android:id="@+id/toggleButtonP4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOff="Falso"
                android:textOn="Verdadero"
                tools:layout_editor_absoluteX="76dp"
                tools:layout_editor_absoluteY="473dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pregunta5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@+id/pregunta4"

        tools:ignore="MissingConstraints">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/bulletDescription"
            android:src="@drawable/bowser_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta4" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintQ" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pregunta6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/pregunta5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="50dp"
            android:contentDescription="@string/bulletDescription"
            android:src="@drawable/bowser_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta6" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Si" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No" />
                </LinearLayout>

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/envio"
        android:layout_width="102dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:text="Enviar"
        app:layout_constraintTop_toBottomOf="@+id/pregunta6"
        tools:layout_editor_absoluteX="282dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>